[package]
name = "zcash-warpsync"
version = "1.2.15"
authors = ["Hanh <hanh425@gmail.com>"]
edition = "2021"

[[bench]]
name = "scan_all"
harness = false
required-features = ["dotenv"]

[[bin]]
name = "warp-rpc"
path = "src/main/rpc.rs"
required-features = ["rpc"]

[[bin]]
name = "wallet"
path = "src/main/wallet.rs"
required-features = ["dotenv"]

[[bin]]
name = "tests"
path = "src/main/tests.rs"
required-features = ["dotenv"]

#[[bin]]
#name = "ledger"
#path = "src/main/ledger.rs"

#[[bin]]
#name = "sign"
#path = "src/main/sign.rs"

[lib]
name = "warp_api_ffi"
crate-type = ["rlib"]

[dependencies]
env_logger = "0.9.0"
anyhow = "1.0.40"
thiserror = "1.0.25"
log = "0.4.14"
flexi_logger = {version="0.22.3", features = ["compress"]}
serde = {version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64"
serde_with = { version = "2", features = ["hex"] }
bincode = "1.3.3"
tokio = { version = "^1.6", features = ["macros", "rt-multi-thread", "time"] }
tokio-stream = "0.1.7"
protobuf = "3.0.2"
hex = "0.4.3"
futures = "0.3.15"
tonic = {version = "0.7.2", features = ["tls", "tls-roots"]}
prost = "0.10.3"
rayon = "1.5.1"
tiny-bip39 = "0.8"
rand = "0.8.4"
rusqlite = { version = "0.27.0", features = ["bundled"] }
jubjub = "0.9.0"
bls12_381 = "0.7"
ff = "0.12"
group = "0.12.0"
byteorder = "^1.4"
secp256k1 = "0.21.3"
tiny-hderive = "0.3.0"
ripemd = "0.1.1"
sha2 = "0.10.2"
lazy_static = "1.4.0"
rustyline = "9.1.2"
clap = "3.1.18"
chrono = "0.4.19"
lazycell = "1.3.0"
reqwest = { version = "0.11.4", features = ["json", "rustls-tls"], default-features = false }

bech32 = "0.8.1"
rand_chacha = "0.3.1"
blake2b_simd = "1.0.0"
chacha20poly1305 = "0.9.0"
base64 = "^0.13"
base58check = "0.1.0"
raptorq = "1.7.0"
sysinfo = "0.25"

ledger-apdu = { version = "0.9.0", optional = true }
hmac = { version = "0.12.1", optional = true }
ed25519-bip32 = { version = "0.4.1", optional = true }
ledger-transport-hid = { version = "0.9", optional = true }

allo-isolate = { version = "0.1", optional = true }
once_cell = { version = "1.8.0", optional = true }
android_logger = { version = "0.10.0", optional = true }
rocket = { version = "0.5.0-rc.2", features = ["json"], optional = true }
dotenv = { version = "0.15.0", optional = true }

node-bindgen = { version = "4.0", optional = true }

rustacuda = { version = "0.1.3", optional = true }
rustacuda_core = { version = "0.1.2", optional = true }
metal = { version = "0.24", optional = true }
objc = { version = "0.2", features = [ "objc_exception" ], optional = true }
block = { version = "0.1.6", optional = true }

[features]
ledger = ["ledger-apdu", "hmac", "ed25519-bip32", "ledger-transport-hid"]
ledger_sapling = ["ledger"]
dart_ffi = ["allo-isolate", "once_cell", "android_logger"]
rpc = ["rocket", "dotenv"]
nodejs = ["node-bindgen"]
cuda = ["rustacuda", "rustacuda_core"]
apple_metal = ["metal", "objc", "block"]

# librustzcash synced to 2781e8514533ea9f31e00465ee984036e3fa493c

[dependencies.zcash_params]
git = "https://github.com/hhanh00/zcash-params.git"
rev = "0f1975b0d8799d852fe62e717dad8885eec1f106"

[dependencies.zcash_client_backend]
git = "https://github.com/hhanh00/librustzcash.git"
rev = "625a06128659d011881698ec13edb66c078a6aa2"

[dependencies.zcash_primitives]
git = "https://github.com/hhanh00/librustzcash.git"
rev = "625a06128659d011881698ec13edb66c078a6aa2"
features = [ "transparent-inputs" ]

[dependencies.zcash_proofs]
git = "https://github.com/hhanh00/librustzcash.git"
rev = "625a06128659d011881698ec13edb66c078a6aa2"

[dependencies.zcash_address]
git = "https://github.com/hhanh00/librustzcash.git"
rev = "625a06128659d011881698ec13edb66c078a6aa2"

[dependencies.zcash_encoding]
git = "https://github.com/hhanh00/librustzcash.git"
rev = "625a06128659d011881698ec13edb66c078a6aa2"

[dependencies.zcash_note_encryption]
git = "https://github.com/hhanh00/librustzcash.git"
rev = "625a06128659d011881698ec13edb66c078a6aa2"

[build-dependencies]
tonic-build = "0.7.2"
cbindgen = "0.19.0"

[dev-dependencies]
criterion = "0.3.4"

